--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,6 @@
 FROM node:latest
 
 
-# ENV NODE_ACCESS_KEY=value
-# ENV NODE_SECRET_ACCESS_KEY=value
-# ENV MY_ENV_VARIABLE=value
-
-
-# Use an official Node.js runtime as the base image
-
-
 # Set the working directory in the container
 WORKDIR /app
 
@@ -20,11 +12,19 @@ COPY serving.js serving.js
 # Install application dependencies
 RUN npm install
 
-# Bundle the source code into the container
-COPY . .
-
 # Expose a port for the application (if needed)
-EXPOSE 3000
+EXPOSE 5000
+
+
+ENV NODE_ACCESS_KEY=AKIAU4AW7XCWSEPKSJWT
+ENV NODE_SECRET_ACCESS_KEY=tfMUbwADZwMRWxClvN81T1qwpCsAipVBbOC21Jhz
 
 # Define the command to run your application
-CMD [ "npm", "start" ]
+CMD [ "node", "serving.js" ]
+
+# docker build -t si3mshady/doggone-backend:latest .
+
+# docker run -p 888:5000  si3mshady/doggone-backend:latest 
+
+
+#  docker push si3mshady/doggone-backend:latest
