--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Deploy to Kubernetes Cluster
         run: |
           # Use SSM to run kubectl commands on the Kubernetes cluster
-          aws ssm create-command --instance-id i-08abce791aa7d7ada --document-name "AWS-RunShellScript" --parameters 'commands=["kubectl apply -f your-k8s-deployment.yaml"]'
+          aws ssm create-command --instance-id i-08abce791aa7d7ada --document-name "AWS-RunShellScript" --parameters 'commands=["kubectl apply -f k8s.yml"]'
           command_id=$(aws ssm wait command-executed --instance-id i-08abce791aa7d7ada --query "Command.CommandId" --output text)
           aws ssm wait command-executed --instance-id i-08abce791aa7d7ada--command-id "$command_id"
           aws ssm cancel-command --instance-id i-08abce791aa7d7ada --command-id "$command_id"
