--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        # run: |
-        #   echo "[default]
-        #   aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" > ~/.aws/credentials
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # - name: Configure AWS credentials
+      #   # run: |
+      #   #   echo "[default]
+      #   #   aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
+      #   #   aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" > ~/.aws/credentials
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Install kubectl
         run: |
@@ -37,6 +37,9 @@ jobs:
 
       - name: Deploy to Kubernetes Cluster
         run: |
+          # Set environment variables
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           # Use SSM to run kubectl commands on the Kubernetes cluster
           aws ssm create-command --instance-id i-08abce791aa7d7ada --document-name "AWS-RunShellScript" --parameters 'commands=["kubectl apply -f k8s.yml"]'
           command_id=$(aws ssm wait command-executed --instance-id i-08abce791aa7d7ada --query "Command.CommandId" --output text)
