--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - dev
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -13,21 +14,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Configure AWS credentials
-      #   # run: |
-      #   #   echo "[default]
-      #   #   aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   #   aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" > ~/.aws/credentials
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
       - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
         if: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Install AWS CLI
+        run: |
+          # Install AWS CLI
+          curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
 
       - name: Build and Test
         run: |
