--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,11 @@ jobs:
           export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
           export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           # Use SSM to run kubectl commands on the Kubernetes cluster
-          aws ssm create-command --instance-id i-08abce791aa7d7ada --document-name "AWS-RunShellScript" --parameters 'commands=["kubectl apply -f k8s.yml"]'
-          command_id=$(aws ssm wait command-executed --instance-id i-08abce791aa7d7ada --query "Command.CommandId" --output text)
-          aws ssm wait command-executed --instance-id i-08abce791aa7d7ada--command-id "$command_id"
-          aws ssm cancel-command --instance-id i-08abce791aa7d7ada --command-id "$command_id"
+          aws ssm send-command \
+          --instance-ids "i-08abce791aa7d7ada" \
+          --document-name "AWS-RunShellScript" \
+          --parameters '{"commands":["kubectl apply -f k8s.yml"]}'
+
         if: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Push to Docker Hub
