--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,12 +38,9 @@ jobs:
       - name: Deploy to Kubernetes Cluster
         run: |
           # Use SSM to run kubectl commands on the Kubernetes cluster
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws ssm send-command \
-          --instance-ids "i-08abce791aa7d7ada" \
-          --document-name "AWS-RunShellScript" \
-          --parameters '{"commands":["kubectl apply -f k8s.yml"]}'
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws ssm send-command --instance-ids "i-08abce791aa7d7ada" --document-name "AWS-RunShellScript" --parameters '{"commands":["kubectl apply -f k8s.yml"]}'
 
         if: ${{ github.ref == 'refs/heads/main' }}
 
