--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,17 @@ on:
       - main
 
 jobs:
-  list-buckets:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: List S3 Buckets
+      - name: Deploy to Kubernetes Cluster
         run: |
-          aws s3 ls
+          aws ssm send-command \
+          --instance-ids "i-08abce791aa7d7ada" \
+          --document-name "AWS-RunShellScript" \
+          --parameters '{"commands":["kubectl apply -f k8s.yml"]}'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
