--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.1483.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
